--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <p>We are 2 students who are developping a startup company that will devise and offer IoT solutions that can slow down climate change.
                     Developing technology to slow down climate change is a crucial and challenging mission, but it's also a rewarding one with the potential for significant positive impact. </p>
 
-                <img src = "/images/green eye.jpg" class = "round_image" class = "section_images">
+                <img src = "./images/green eye.jpg" class = "round_image" class = "section_images">
             </div>
             
         </section>
@@ -40,7 +40,7 @@
             <h3>About climate change</h3>
             <div class = "content_sections">
                 <p>Climate change refers to the long-term alteration of Earth's climate patterns primarily driven by human activities, particularly the emission of greenhouse gases, such as carbon dioxide and methane. The consequences of climate change are far-reaching, including global warming with rising temperatures, melting ice caps and rising sea levels, a heightened frequency of extreme weather events, ocean acidification, disruption of ecosystems and biodiversity, water scarcity, impacts on agriculture and food security, adverse health effects, economic losses, and even migration and conflict, making it one of the most pressing global challenges threatening our environment, economies, and societies.</p>
-                <img src="/images/earth.jpg" id = "img_earth">
+                <img src="./images/earth.jpg" id = "img_earth">
             </div>
         </section>
     
